src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__aa.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 17,
        "id": {
          "end": 8,
          "name": "sg",
          "start": 6,
          "type": "Identifier"
        },
        "init": {
          "argument": {
            "end": 17,
            "name": "scale",
            "start": 12,
            "type": "Identifier",
            "type": "Identifier"
          },
          "end": 17,
          "operator": "-",
          "start": 11,
          "type": "UnaryExpression",
          "type": "UnaryExpression"
        },
        "start": 6,
        "type": "VariableDeclarator"
      },
      "end": 17,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 17,
  "start": 0
}
