src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ab.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "end": 23,
      "expression": {
        "arguments": [
          {
            "end": 22,
            "properties": [
              {
                "end": 20,
                "key": {
                  "end": 11,
                  "name": "to",
                  "start": 9,
                  "type": "Identifier"
                },
                "start": 9,
                "type": "ObjectProperty",
                "value": {
                  "elements": [
                    {
                      "end": 15,
                      "raw": "0",
                      "start": 14,
                      "type": "Literal",
                      "type": "Literal",
                      "value": {
                        "value": 0.0,
                        "suffix": "None"
                      }
                    },
                    {
                      "argument": {
                        "end": 19,
                        "raw": "1",
                        "start": 18,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 1.0,
                          "suffix": "None"
                        }
                      },
                      "end": 19,
                      "operator": "-",
                      "start": 17,
                      "type": "UnaryExpression",
                      "type": "UnaryExpression"
                    }
                  ],
                  "end": 20,
                  "start": 13,
                  "type": "ArrayExpression",
                  "type": "ArrayExpression"
                }
              }
            ],
            "start": 7,
            "type": "ObjectExpression",
            "type": "ObjectExpression"
          }
        ],
        "callee": {
          "end": 6,
          "name": "lineTo",
          "start": 0,
          "type": "Identifier"
        },
        "end": 23,
        "start": 0,
        "type": "CallExpression",
        "type": "CallExpression"
      },
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "end": 23,
  "start": 0
}
