src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ac.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 17,
        "id": {
          "end": 7,
          "name": "myArray",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "end": 17,
          "endElement": {
            "end": 16,
            "raw": "10",
            "start": 14,
            "type": "Literal",
            "type": "Literal",
            "value": 10.0
          },
          "endInclusive": true,
          "start": 10,
          "startElement": {
            "end": 12,
            "raw": "0",
            "start": 11,
            "type": "Literal",
            "type": "Literal",
            "value": 0.0
          },
          "type": "ArrayRangeExpression",
          "type": "ArrayRangeExpression"
        },
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 17,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 17,
  "start": 0
}
