src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ad.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 57,
        "id": {
          "end": 24,
          "name": "firstPrimeNumber",
          "start": 8,
          "type": "Identifier"
        },
        "init": {
          "body": {
            "body": [
              {
                "argument": {
                  "end": 51,
                  "raw": "2",
                  "start": 50,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 2.0
                },
                "end": 51,
                "start": 43,
                "type": "ReturnStatement",
                "type": "ReturnStatement"
              }
            ],
            "end": 57,
            "start": 33
          },
          "end": 57,
          "params": [],
          "start": 27,
          "type": "FunctionExpression",
          "type": "FunctionExpression"
        },
        "start": 8,
        "type": "VariableDeclarator"
      },
      "end": 57,
      "kind": "fn",
      "start": 5,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    },
    {
      "end": 80,
      "expression": {
        "arguments": [],
        "callee": {
          "end": 78,
          "name": "firstPrimeNumber",
          "start": 62,
          "type": "Identifier"
        },
        "end": 80,
        "start": 62,
        "type": "CallExpression",
        "type": "CallExpression"
      },
      "start": 62,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "end": 80,
  "start": 0
}
