src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ae.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3974
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 49,
          "id": {
            "end": 8,
            "name": "thing",
            "start": 3,
            "type": "Identifier"
          },
          "init": {
            "body": {
              "body": [
                {
                  "argument": {
                    "end": 43,
                    "raw": "true",
                    "start": 39,
                    "type": "Literal",
                    "type": "Literal",
                    "value": true
                  },
                  "end": 43,
                  "start": 32,
                  "type": "ReturnStatement",
                  "type": "ReturnStatement"
                }
              ],
              "end": 49,
              "start": 22
            },
            "end": 49,
            "params": [
              {
                "type": "Parameter",
                "identifier": {
                  "end": 17,
                  "name": "param",
                  "start": 12,
                  "type": "Identifier"
                },
                "optional": false
              }
            ],
            "start": 11,
            "type": "FunctionExpression",
            "type": "FunctionExpression"
          },
          "start": 3,
          "type": "VariableDeclarator"
        }
      ],
      "end": 49,
      "kind": "fn",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    },
    {
      "end": 66,
      "expression": {
        "arguments": [
          {
            "end": 65,
            "raw": "false",
            "start": 60,
            "type": "Literal",
            "type": "Literal",
            "value": false
          }
        ],
        "callee": {
          "end": 59,
          "name": "thing",
          "start": 54,
          "type": "Identifier"
        },
        "end": 66,
        "start": 54,
        "type": "CallExpression",
        "type": "CallExpression"
      },
      "start": 54,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "end": 66,
  "start": 0
}
