src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__af.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 165,
        "id": {
          "end": 14,
          "name": "mySketch",
          "start": 6,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "arguments": [
                {
                  "elements": [
                    {
                      "end": 33,
                      "raw": "0",
                      "start": 32,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 0.0
                    },
                    {
                      "end": 35,
                      "raw": "0",
                      "start": 34,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 0.0
                    }
                  ],
                  "end": 36,
                  "start": 31,
                  "type": "ArrayExpression",
                  "type": "ArrayExpression"
                }
              ],
              "callee": {
                "end": 30,
                "name": "startSketchAt",
                "start": 17,
                "type": "Identifier"
              },
              "end": 37,
              "start": 17,
              "type": "CallExpression",
              "type": "CallExpression"
            },
            {
              "arguments": [
                {
                  "elements": [
                    {
                      "end": 58,
                      "raw": "0",
                      "start": 57,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 0.0
                    },
                    {
                      "end": 61,
                      "raw": "1",
                      "start": 60,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 1.0
                    }
                  ],
                  "end": 62,
                  "start": 56,
                  "type": "ArrayExpression",
                  "type": "ArrayExpression"
                },
                {
                  "end": 65,
                  "start": 64,
                  "type": "PipeSubstitution",
                  "type": "PipeSubstitution"
                },
                {
                  "end": 74,
                  "start": 67,
                  "type": "TagDeclarator",
                  "type": "TagDeclarator",
                  "value": "myPath"
                }
              ],
              "callee": {
                "end": 55,
                "name": "lineTo",
                "start": 49,
                "type": "Identifier"
              },
              "end": 75,
              "start": 49,
              "type": "CallExpression",
              "type": "CallExpression"
            },
            {
              "arguments": [
                {
                  "elements": [
                    {
                      "end": 96,
                      "raw": "1",
                      "start": 95,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 1.0
                    },
                    {
                      "end": 99,
                      "raw": "1",
                      "start": 98,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 1.0
                    }
                  ],
                  "end": 100,
                  "start": 94,
                  "type": "ArrayExpression",
                  "type": "ArrayExpression"
                },
                {
                  "end": 103,
                  "start": 102,
                  "type": "PipeSubstitution",
                  "type": "PipeSubstitution"
                }
              ],
              "callee": {
                "end": 93,
                "name": "lineTo",
                "start": 87,
                "type": "Identifier"
              },
              "end": 104,
              "start": 87,
              "type": "CallExpression",
              "type": "CallExpression"
            },
            {
              "arguments": [
                {
                  "elements": [
                    {
                      "end": 125,
                      "raw": "1",
                      "start": 124,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 1.0
                    },
                    {
                      "end": 128,
                      "raw": "0",
                      "start": 127,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 0.0
                    }
                  ],
                  "end": 129,
                  "start": 123,
                  "type": "ArrayExpression",
                  "type": "ArrayExpression"
                },
                {
                  "end": 132,
                  "start": 131,
                  "type": "PipeSubstitution",
                  "type": "PipeSubstitution"
                },
                {
                  "end": 144,
                  "start": 134,
                  "type": "TagDeclarator",
                  "type": "TagDeclarator",
                  "value": "rightPath"
                }
              ],
              "callee": {
                "end": 122,
                "name": "lineTo",
                "start": 116,
                "type": "Identifier"
              },
              "end": 145,
              "start": 116,
              "type": "CallExpression",
              "type": "CallExpression"
            },
            {
              "arguments": [
                {
                  "end": 164,
                  "start": 163,
                  "type": "PipeSubstitution",
                  "type": "PipeSubstitution"
                }
              ],
              "callee": {
                "end": 162,
                "name": "close",
                "start": 157,
                "type": "Identifier"
              },
              "end": 165,
              "start": 157,
              "type": "CallExpression",
              "type": "CallExpression"
            }
          ],
          "end": 165,
          "start": 17,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "start": 6,
        "type": "VariableDeclarator"
      },
      "end": 165,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 165,
  "start": 0
}
