src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ah.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3993
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 30,
          "id": {
            "end": 11,
            "name": "myBox",
            "start": 6,
            "type": "Identifier"
          },
          "init": {
            "arguments": [
              {
                "end": 29,
                "name": "p",
                "start": 28,
                "type": "Identifier",
                "type": "Identifier"
              }
            ],
            "callee": {
              "end": 27,
              "name": "startSketchAt",
              "start": 14,
              "type": "Identifier"
            },
            "end": 30,
            "start": 14,
            "type": "CallExpression",
            "type": "CallExpression"
          },
          "start": 6,
          "type": "VariableDeclarator"
        }
      ],
      "end": 30,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 30,
  "start": 0
}
