src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ai.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 23,
        "id": {
          "end": 5,
          "name": "myBox",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "arguments": [
                {
                  "end": 11,
                  "raw": "1",
                  "start": 10,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 1.0
                }
              ],
              "callee": {
                "end": 9,
                "name": "f",
                "start": 8,
                "type": "Identifier"
              },
              "end": 12,
              "start": 8,
              "type": "CallExpression",
              "type": "CallExpression"
            },
            {
              "arguments": [
                {
                  "end": 19,
                  "raw": "2",
                  "start": 18,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 2.0
                },
                {
                  "end": 22,
                  "start": 21,
                  "type": "PipeSubstitution",
                  "type": "PipeSubstitution"
                }
              ],
              "callee": {
                "end": 17,
                "name": "g",
                "start": 16,
                "type": "Identifier"
              },
              "end": 23,
              "start": 16,
              "type": "CallExpression",
              "type": "CallExpression"
            }
          ],
          "end": 23,
          "start": 8,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 23,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 23,
  "start": 0
}
