src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ak.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3996
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "end": 22,
      "expression": {
        "arguments": [
          {
            "end": 21,
            "properties": [
              {
                "end": 19,
                "key": {
                  "end": 11,
                  "name": "to",
                  "start": 9,
                  "type": "Identifier"
                },
                "start": 9,
                "type": "ObjectProperty",
                "value": {
                  "elements": [
                    {
                      "end": 15,
                      "raw": "0",
                      "start": 14,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 0.0
                    },
                    {
                      "end": 18,
                      "raw": "1",
                      "start": 17,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 1.0
                    }
                  ],
                  "end": 19,
                  "start": 13,
                  "type": "ArrayExpression",
                  "type": "ArrayExpression"
                }
              }
            ],
            "start": 7,
            "type": "ObjectExpression",
            "type": "ObjectExpression"
          }
        ],
        "callee": {
          "end": 6,
          "name": "lineTo",
          "start": 0,
          "type": "Identifier"
        },
        "end": 22,
        "start": 0,
        "type": "CallExpression",
        "type": "CallExpression"
      },
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "end": 22,
  "start": 0
}
