src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__am.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3998
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "end": 19,
      "expression": {
        "arguments": [
          {
            "end": 18,
            "properties": [
              {
                "end": 17,
                "key": {
                  "end": 10,
                  "name": "to",
                  "start": 8,
                  "type": "Identifier"
                },
                "start": 8,
                "type": "ObjectProperty",
                "value": {
                  "elements": [
                    {
                      "end": 13,
                      "raw": "0",
                      "start": 12,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 0.0
                    },
                    {
                      "end": 16,
                      "raw": "1",
                      "start": 15,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 1.0
                    }
                  ],
                  "end": 17,
                  "start": 11,
                  "type": "ArrayExpression",
                  "type": "ArrayExpression"
                }
              }
            ],
            "start": 7,
            "type": "ObjectExpression",
            "type": "ObjectExpression"
          }
        ],
        "callee": {
          "end": 6,
          "name": "lineTo",
          "start": 0,
          "type": "Identifier"
        },
        "end": 19,
        "start": 0,
        "type": "CallExpression",
        "type": "CallExpression"
      },
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "end": 19,
  "start": 0
}
